# creator-assistant

./: .env.example  .gitignore  Makefile  README.md  deployment_notes.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: python-package.yml
app/omicron_agent_kit/: __init__.py  config.py  stats.py
app/omicron_agent_kit/agents/: analytics_agent.py  base.py  insight_agent.py  monitoring_agent.py  notification_agent.py
app/omicron_agent_kit/api/: audit.py  auth.py  main.py  schemas.py
app/omicron_agent_kit/db/: __init__.py  audit.py  baselines.py  checkpoints.py  connection.py  schema.sql  tokens.py
app/omicron_agent_kit/eval/: metrics.py
app/omicron_agent_kit/llm/: providers.py
app/omicron_agent_kit/mcp/: README.md  server.py
app/omicron_agent_kit/ml/: forecast.py
app/omicron_agent_kit/platform/: tiktok.py
app/omicron_agent_kit/signatures/: post_performance_insight.py
app/omicron_agent_kit/workflows/: __init__.py  pubiq.py
data/examples/: insight_agent.jsonl
docker/: Dockerfile  docker-compose.yml  pubiq-api.conf  pubiq.service
docs/: Product-TikTok-Agent.txt  business.txt  testing-pubiq-workflow.md  tiktok-oauth-local-setup.md
frontend/: capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
infra/: .terraform.lock.hcl  acm.tf  cloudfront_function.tf  cloudfront_policies.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
infra/ec2/: .terraform.lock.hcl  README.md  bootstrap-state.sh  main.tf  outputs.tf  terraform.tfvars  variables.tf
infra/functions/: url_rewrite.js
scripts/: compile.py
tests/: test_baselines.py  test_e2e.py  test_forecast.py  test_health.py  test_pipeline.py  test_pubiq_logic.py  test_tiktok_adapter.py
(+31 files in other folders)
